--- a/src/components/profile-card.css
+++ b/src/components/profile-card.css
@@ -5,6 +5,7 @@
   max-width: 80%;
   margin-left: 20%;
   margin-right: 20%
+  
  
 }
 .profile-card img {
@@ -18,6 +19,7 @@
   justify-content: space-between;
   margin-left: 50px;
   margin-right: 50px;
+  margin-bottom: 10px;
 }
 
 .swipe-buttons {
@@ -25,5 +27,6 @@
   justify-content: space-between;
   margin-left: 50px;
   margin-right: 50px;
+
 
 }
