add a edit button on profile and log in  and logout works showing profile pic and name

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+.img-profile {
+  width: 200px; /* Set your desired width */
+  height: 200px; /* Set your desired height */
+}
