--- a/src/components/chat.css
+++ b/src/components/chat.css
@@ -1,16 +1,43 @@
+
+.chatContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 .newMatches {
   list-style-type: none;
   padding: 0;
   margin: 0;
   display: flex;
-  background-color: red;
 }
 
 .newMatches li {
-  margin-right: 10px;
+  margin-left: 40px;
+  
 }
 
 .messageLog {
+  display: flex;
   list-style-type: none;
-  margin-top: 10px;
+  margin-top: 0px;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+
+.messageLog li {
+  margin-bottom: 10px;
+}
+
+
+.newMatchesHeader{
+  display: flex;
+  /* background-color: red; */
+  align-items: flex-start;
+  margin-left: 40px;
+}
+.messageLogHeader{
+  display: flex;
+  align-items: flex-start;
+  margin-left: 40px;
 }
