--- a/src/components/profile-card.css
+++ b/src/components/profile-card.css
@@ -1,6 +1,6 @@
 .profile-card {
   
-  background-color: red;
+  background-color: lightgray;
   align-items: center;
   max-width: 80%;
   margin-left: 20%;
@@ -9,20 +9,8 @@
   flex-direction: column;  
  
 }
-.profile-card img {
-  max-width: 350px;
-  max-height: 350px;
-  object-fit: cover;
 
-  /* clip-path: inset(0 75px 0 75px); */
-}
-.image-container {
-  height: auto;
-  overflow: hidden;
-  display: flex;
-  justify-content: center; 
-  background-color: black;
-}
+
 
 .profile-info {
   display: flex;
@@ -40,5 +28,21 @@
   margin-right: 50px;
 
 
+}
+
+
+.image-container {
+  width: 200px; 
+  height: 200px;
+  overflow: hidden; /* Hide any overflow if the image is larger than the container */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-container img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover; /* This property scales the image to cover the entire container, maintaining its aspect ratio */
 }
 
