--- a/src/components/chat.css
+++ b/src/components/chat.css
@@ -41,3 +41,9 @@
   align-items: flex-start;
   margin-left: 40px;
 }
+
+.profile-image {
+  width: 400px; 
+  height: 200px;
+  object-fit: cover; 
+}
