--- a/src/components/chat.css
+++ b/src/components/chat.css
@@ -2,22 +2,18 @@
 
 .chatroom {
   background-color: #F2D0A4;
-  width: 100%;
-}
-
-.message-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #F7F7FF;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   width: 90%;
-  margin: 0 auto;
-  margin-top: 20px;
+margin:20px
 }
 
+.message-container img {
+  max-width: 150px; /* Set your desired maximum width */
+  max-height: 150px; /* Set your desired maximum height */
+  object-fit: cover;
+  border-radius: 50%;
+  margin-bottom: 10px;
+  margin-top: 10px; /* Adjust the margin-top as needed */
+}
 .message-container .message-log {
   background-color: #F2D0A4; /* Set background color for the message log */
   border-radius: 10px; /* You can adjust the border-radius for the message log separately */
@@ -98,3 +94,26 @@
   }
 }
 
+
+
+.chat-container .message-log {
+  background-color: #F2D0A4;
+  margin-left: 10%;
+  margin-right: 10%;
+  list-style-type: none;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  width: 80%;
+  height:80%;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+.chat-container .profile-image {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10%;
+  margin-right: 10px;
+}
