--- a/src/components/chat.css
+++ b/src/components/chat.css
@@ -6,25 +6,41 @@
 margin:20px
 }
 
+.message-container {
+  background-color: #F2D0A4;
+  border-radius: 10px; 
+  padding: 20px; 
+  display: flex;
+  flex-direction: column; 
+  align-items: flex-start; 
+  max-width: 80%; 
+  margin: 0 auto;
+  margin-top: 20px;
+  height: 80%;
+}
+
+
+
+
 .message-container img {
-  max-width: 150px; /* Set your desired maximum width */
-  max-height: 150px; /* Set your desired maximum height */
+  max-width: 150px; 
+  max-height: 150px;
   object-fit: cover;
   border-radius: 50%;
   margin-bottom: 10px;
-  margin-top: 10px; /* Adjust the margin-top as needed */
+  margin-top: 10px; 
 }
 .message-container .message-log {
-  background-color: #F2D0A4; /* Set background color for the message log */
-  border-radius: 10px; /* You can adjust the border-radius for the message log separately */
-  padding: 20px; /* Adjust padding for the message log */
+  background-color: #F2D0A4; 
+  border-radius: 10px; 
+  padding: 20px; 
 }
 
 .message-container img.user-profile-icon {
-  width: 24px; /* Set the same width as .user-profile-icon */
-  height: 24px; /* Set the same height as .user-profile-icon */
+  width: 24px; 
+  height: 24px; 
   margin-top: 10px;
-  margin-right: 0.5em; /* Optional: Add some spacing between picture and text */
+  margin-right: 0.5em;
 }
 
 .message-container h2 {
